<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kiroff.kafka</groupId>
    <artifactId>core</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>core</name>
    <description>A shared core event library</description>
    <url>https://github.com/kiroff/core</url>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer>
            <name>Boyan G. Kiroff</name>
            <email>boyan@kiroff.org</email>
            <url>https://www.kiroff.org</url>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:ssh://github.com:kiroff/core.git</connection>
        <developerConnection>scm:git:ssh://github.com:kiroff/core.git</developerConnection>
        <tag/>
        <url>https://github.com/kiroff/core</url>
    </scm>
    <properties>
        <java.version>25</java.version>
        <java.args>--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</java.args>
        <spring-boot.version>4.0.4</spring-boot.version>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.relese>${java.version}</maven.compiler.relese>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <maven.min.version>3.9.0</maven.min.version>

        <argLine/>

        <plugin.maven.compiler.version>3.14.1</plugin.maven.compiler.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
    </properties>

</project>
